syntax = "proto3";

option java_multiple_files = true;
option java_package = "api.eventSourced.grpc";

package api.eventSourced.grpc;

import "scalapb/scalapb.proto";
import "google/protobuf/wrappers.proto";

enum Status {
   active = 0;
   inactive = 1;
}

message Address{
  google.protobuf.StringValue street = 1 [(scalapb.field).no_box = true, (scalapb.field).required = true];
  google.protobuf.Int64Value no = 2 [(scalapb.field).no_box = true, (scalapb.field).required = true];
}

message CreatePersonRequest {
  google.protobuf.StringValue name = 1 [(scalapb.field).no_box = true, (scalapb.field).required = true];
  google.protobuf.StringValue town = 2;
  Address address = 3;
    // Status status = 4;
}

message CreatePersonResponse {
    string id = 1;
}

message UpdatePersonRequest {
  google.protobuf.StringValue id = 1 [(scalapb.field).no_box = true, (scalapb.field).required = true];
  google.protobuf.StringValue town = 2;
  Address address = 3;
}

message GetPersonRequest {
    string id = 1;
}

message GetPersonResponse {
   google.protobuf.StringValue name = 1;
   google.protobuf.StringValue town = 2;
   Address address = 3;
}

service HomeService {
    rpc CreatePerson(CreatePersonRequest) returns (CreatePersonResponse) {}
    rpc UpdatePerson(UpdatePersonRequest) returns (GetPersonResponse) {}
    rpc GetPerson(GetPersonRequest) returns (GetPersonResponse) {}
}
